# code-profile-sync

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: ci.yml  vscodium-smoke.yml
docs/: config.md
schema/: config.schema.json
src/: app.rs  app_config.rs  cli.rs  config.rs  extension.rs  lib.rs  safety.rs  snapshot.rs  sync.rs
src/editor/: discover.rs  mod.rs  paths.rs  profiles.rs
