[package]
name = "code-profile-manager"
version = "0.1.0"
edition = "2024"
description = "Manage settings and extensions across profiles of a VS Code OSS-based editor."
publish = false
default-run = "code-profile-manager"

[[bin]]
name = "code-pm"
path = "src/bin/code-pm.rs"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

unexpected_cfgs = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
must_use_candidate = "allow"
manual_div_ceil = "allow"

# Early-stage personal project: metadata is intentionally minimal, and transitive
# duplicate versions are outside our control.
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
cfg_not_test = "warn"
expect_used = "warn"
indexing_slicing = "warn"
module_name_repetitions = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
jsonc-parser = { version = "0.32.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
sysinfo = "0.39.5"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.23.0"
